--- a/style.css
+++ b/style.css
@@ -1,42 +1,49 @@
 *{
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 }
-.game{
-  width: auto;
+.game {
+  width: 500px;
   height: 200px;
-  border: 2px solid black;
-  margin: auto;
+  border: 1px solid black;
+  margin: 0 auto;
 }
+
 #character {
-  width: 20px;
-  height 50px;
-  background: red;
-  position:relative;
+  position: relative;
+  height: 50px;
+  width: 50px;
+  background-color: red;
   top: 150px;
+  left: 20px;
+  border-radius: 100%;
 }
+
 .animate {
-  animation: jump .3s linear;
+
+  animation: jump 2s cubic-bezier(0.25, 1, 0.5, 1);
+
 }
 
 @keyframes jump {
-  0%{top: 150px;  }
-  30%{top: 100px;}
-  70%{top: 100px;}
+  0%{top: 150px;}
+  30%{top: 110px;}
+  70%{top: 110px;}
   100%{top: 150px;}
 }
 
-#block {
-  width: 20px;
-  height: 20px;
-  background: black;
+#obstacle {
   position: relative;
-  top: 180px;
+  height: 20px;
+  width: 20px;
+  background-color: black;
+  top: 130px;
   left: 500px;
-  animation: block 1s ininite linear;
+  animation: obstacle 1s infinite linear;
 }
 
-@keyframes block {
+@keyframes obstacle {
   0% {left: 500px;}
   100% {left: -20px;}
 }
